Re-organize file structure

--- a/t1/html/index.html
+++ b/t1/html/index.html
@@ -30,10 +30,10 @@
 				  onmouseout="this.src='images/adam.jpg'">	
 			</div>
 			<div id="contact">
-				<article>
+				<address>
 					Written by: Adamo Carolli<br>
 					Contact at: <a href="https://github.com/adamocarolli">My GitHub Page</a><br>
-				</article>
+				</address>
 			</div>
 		</div>
 	</body>
