--- a/t1/p2/CSSLab/home.html
+++ b/t1/p2/CSSLab/home.html
@@ -9,7 +9,8 @@
 
 <body>
   <nav>
-    <a href="home.html">Home</a> <a href="courses.html">Courses</a>
+    <a href="home.html">Home</a> 
+    <a href="courses.html">Courses</a>
     <a href="news.html">News</a>
   </nav>
 
