--- a/a1/index.html
+++ b/a1/index.html
@@ -4,6 +4,9 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css" type="text/css">
+
   <title>plenty. | Home</title>
 </head>
 
@@ -15,7 +18,7 @@
     <img src="./images/fennel-with-capers-and-olives.jpg">
   </nav>
   	
-  <div id="content">
+  <section id="content">
     <div id="lunch">
       <header class="menu">
         Lunch
@@ -47,7 +50,7 @@
       	<li class="menu-item">dish 16 name</li>
       </ul>
     </div>
-  </div>
+  </section>
 
   <footer>
     <div class="about">
