--- a/a1/index.html
+++ b/a1/index.html
@@ -6,57 +6,61 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel='stylesheet' type='text/css'
+        href='https://fonts.googleapis.com/css?family=Poiret+One'>
 
   <title>plenty. | Home</title>
 </head>
 
 <body>
-  <nav id="main">
-    <header class="main">
-      plenty.
-    </header>
-    <img src="./images/fennel-with-capers-and-olives.jpg">
-  </nav>
-  	
-  <section id="content">
-    <div id="lunch">
-      <header class="menu">
-        Lunch
+  <div class="container">
+    <nav id="main">
+      <header class="main">
+        plenty.
       </header>
-      <ul class="menu">
-      	<li class="menu-item">dish 1 name</li>
-      	<li class="menu-item">dish 2 name</li>
-      	<li class="menu-item">dish 3 name</li>
-      	<li class="menu-item">dish 4 name</li>
-      	<li class="menu-item">dish 5 name</li>
-      	<li class="menu-item">dish 6 name</li>
-      	<li class="menu-item">dish 7 name</li>
-      	<li class="menu-item">dish 8 name</li>
-      </ul>
-    </div>
-
-    <div id="dinner">
-      <header class="menu">
-        Dinner
-      </header>
-      <ul class="menu">
-      	<li class="menu-item">dish 9 name</li>
-      	<li class="menu-item">dish 10 name</li>
-      	<li class="menu-item">dish 11 name</li>
-      	<li class="menu-item">dish 12 name</li>
-      	<li class="menu-item">dish 13 name</li>
-      	<li class="menu-item">dish 14 name</li>
-      	<li class="menu-item">dish 15 name</li>
-      	<li class="menu-item">dish 16 name</li>
-      </ul>
-    </div>
-  </section>
-
-  <footer>
-    <div class="about">
-      <i>plenty.</i> is a fictional restuarant based on 
-      <i>Yotam Ottolenghi</i>'s Cookbook of the same name.  
-    </div>
-  </footer>
+      <img src="./images/fennel-with-capers-and-olives.jpg">
+    </nav>
+    	
+    <section id="content">
+      <div id="lunch">
+        <header class="menu">
+          Lunch
+        </header>
+        <ul class="menu">
+        	<li class="menu-item">dish 1 name</li>
+        	<li class="menu-item">dish 2 name</li>
+        	<li class="menu-item">dish 3 name</li>
+        	<li class="menu-item">dish 4 name</li>
+        	<li class="menu-item">dish 5 name</li>
+        	<li class="menu-item">dish 6 name</li>
+        	<li class="menu-item">dish 7 name</li>
+        	<li class="menu-item">dish 8 name</li>
+        </ul>
+      </div>
+  
+      <div id="dinner">
+        <header class="menu">
+          Dinner
+        </header>
+        <ul class="menu">
+        	<li class="menu-item">dish 9 name</li>
+        	<li class="menu-item">dish 10 name</li>
+        	<li class="menu-item">dish 11 name</li>
+        	<li class="menu-item">dish 12 name</li>
+        	<li class="menu-item">dish 13 name</li>
+        	<li class="menu-item">dish 14 name</li>
+        	<li class="menu-item">dish 15 name</li>
+        	<li class="menu-item">dish 16 name</li>
+        </ul>
+      </div>
+    </section>
+  
+    <footer>
+      <div class="about">
+        <i>plenty.</i> is a fictional restuarant based on 
+        <i>Yotam Ottolenghi</i>'s Cookbook of the same name.  
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
