Style headers of menu

--- a/a1/index.html
+++ b/a1/index.html
@@ -14,14 +14,14 @@
 
 <body>
   <div class="container">
-    <nav id="main">
+    <nav class="main">
       <header class="main">
         plenty.
       </header>
       <img src="./images/fennel-with-capers-and-olives.jpg">
     </nav>
     	
-    <section id="content">
+    <section class="content">
       <div id="lunch">
         <header class="menu">
           Lunch
