Style menu items

--- a/a1/index.html
+++ b/a1/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="style.css" type="text/css">
   <link rel='stylesheet' type='text/css'
         href='https://fonts.googleapis.com/css?family=Poiret+One'>
+  <link rel='stylesheet' type='text/css'
+        href='https://fonts.googleapis.com/css?family=PT+Serif'>
 
   <title>plenty. | Home</title>
 </head>
@@ -26,7 +28,7 @@
         <header class="menu">
           Lunch
         </header>
-        <ul class="menu">
+        <ol class="menu">
         	<li class="menu-item">Braised Fennel With Capers And Olives</li>
         	<li class="menu-item">Jersey Royals, Samphire And Buttered Radishes</li>
         	<li class="menu-item">Kohlrabi, Apple And Beetroot Salad</li>
@@ -42,7 +44,7 @@
         <header class="menu">
           Dinner
         </header>
-        <ul class="menu">
+        <ol class="menu" start="9">
         	<li class="menu-item">Lamb Rump With Vanilla-Braised Chicory And Sorrel Pesto</li>
         	<li class="menu-item">Sea Bass And Turmeric Potatoes In Rasam Broth</li>
         	<li class="menu-item">Courgette And Manouri Fritters</li>
